Signed APK hinzugefügt

--- a/LernKalender/LernKalender.Android/LernKalender.Android.csproj
+++ b/LernKalender/LernKalender.Android/LernKalender.Android.csproj
@@ -50,6 +50,7 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkTool>proguard</AndroidLinkTool>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
